Adding jar for timewindow compaction